# v_cond

./: README.md  _config.yml  index.html
_includes/: head.html  head.html~
_layouts/: default.html
_posts/: 2014-11-01-PhD finished.markdown~  2015-01-29-post.markdown
_site/: README.md  feed.xml  index.html
_site/KS-SCE/: index.html
_site/about/: index.html
_site/download/: index.html
_site/install/: index.html
_site/news/: index.html
_site/publications/: index.html
_site/run/: index.html
examples/h2_aug-cc-pVTZ_FCI/: h2_aug-cc-pVTZ_FCI.inp  vcond.grid
gamess/: #INPUT.DOC#  #lked#  INPUT.DOC  INTRO.DOC  PROG.DOC  REFS.DOC  TESTS.DOC  comp  compall  config  ddikick.x  install.info  install.info.cp  runall  rungms  rungmsvcond  rungmsvcond~
gamess/ddi/: #readme.ddi#  compddi  data_server.x  ddi_test.x  ddikick.x
gamess/graphics/: complink  complink.com  dendif.code  dendif.com  intro.man  mepmap.com  molplt.com  pltorb.com  pltorb.man
gamess/libqc/: Makefile.in  aaa.readme.1st  aclocal.m4  configure  configure.ac
gamess/libqc/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
gamess/libqc/config/: config.h  config.h.in
gamess/libqc/doc/: Doxyfile
gamess/libqc/include/: rysq-cuda.hpp  rysq-cuda_flymake.hpp
gamess/libqc/include/rysq/: config_flymake.hpp  core_flymake.hpp  cuda-matrix_flymake.hpp  cuda-memory_flymake.hpp  eri.hpp  fock_flymake.hpp
gamess/libqc/rysq/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
gamess/libqc/rysq/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
gamess/libqc/rysq/config/: ax_cuda.m4  cheetah.mk  config.h  config.h.in
gamess/libqc/rysq/lib/python/: rysq-generate.py  shell.py
gamess/libqc/rysq/src/: Makefile  Makefile.am  Makefile.in  constants.h  eri-eval.hpp  eri-factory.hpp  eri-impl.hpp  eri.cpp  fock-eval.hpp  fock-impl.hpp  fock-transform.hpp  fock.cpp  global.tmpl  index.hpp  memory.h  normalize.h  parallel.cpp  quartet.cpp  rysq.cpp  rysq.hpp.in  shell.cpp  test.cpp  transfer.hpp  transpose.hpp  vector.hpp
gamess/libqc/rysq/src/.deps/: eri.Plo  fock.Plo  parallel.Plo  quartet.Plo  rysq.Plo  shell.Plo
gamess/libqc/rysq/src/bindings/: Makefile  Makefile.in
gamess/libqc/rysq/src/cuda/: Makefile  Makefile.in  braket.cpp  detail.hpp  eri.cpp  fock.cpp  fock.hpp  fock2.cpp  host.cpp  matrix.hpp  quartet-index.cpp  quartet.cpp  quartet.hpp  ~index.cpp
gamess/libqc/rysq/src/cuda/.deps/: eri.Plo  fock.Plo  host.Plo  quartet.Plo
gamess/libqc/rysq/src/cuda/kernel/: Makefile  Makefile.am  Makefile.in  dsss.cu  eri.cu  fock.cu  link.cpp  psss.cu  quadrature.hpp  quartet.hpp  recurrence.hpp  reduce.cu  ssss.cu  transfer.hpp
gamess/libqc/rysq/src/cuda/kernel/.deps/: eri.Plo  fock.Plo  link.Plo  reduce.Plo
gamess/libqc/rysq/src/cuda/old/: cuda_test.cu  curysq.cpp  curysq.h.itmpl  curysq_const.h.tmpl  curysq_eri.h  curysq_eri2.cu.tmpl  curysq_eri3.cu.tmpl  curysq_eri4.cu.tmpl  curysq_eri_ss2.cu  curysq_eri_sss01.cu  curysq_int2d.cu.tmpl  curysq_int2d.h  curysq_jk.h  curysq_jk2.cu.tmpl  curysq_jk4.cu.tmpl  curysq_util.h  gpu.c
gamess/libqc/rysq/src/kernel/: Makefile  Makefile.am  Makefile.in  eri-bra.hpp  eri.cpp  eri.hpp  eri1.hpp  eri2.hpp  new.hpp  quadrature.hpp  quadrature1-impl.hpp  quadrature1-impl.hpp.tmpl  quadrature1.hpp  quadrature2-impl.hpp  quadrature2-impl.hpp.tmpl  quadrature2.hpp  quadrature2.hpp.new  quadrature2.py  recurrence.hpp  test.cpp  transfer.hpp
gamess/libqc/rysq/src/kernel/.deps/: eri-bra.Plo  eri.Plo
gamess/libqc/rysq/src/roots/: Makefile  Makefile.am  Makefile.in  asymptotic.hpp  evaluate.hpp  rysq_roots.cpp  rysq_roots.h  rysq_roots0.h.allada  rysq_roots0_check.cpp  rysq_roots0_flymake.h  rysq_roots1.h.allada  rysq_roots1_check.cpp  rysq_roots1_flymake.h  rysq_roots2.h  rysq_roots2.h.allada  rysq_roots2_check.cpp  rysq_roots3.h  rysq_roots3.h.allada  rysq_roots3_check.cpp  rysq_roots4.h  rysq_roots5.h  rysq_roots_flymake_master_flymake_master.cpp  rysq_roots_flymake_master_flymake_master_flymake_master.cpp
gamess/libqc/rysq/src/roots/.deps/: rysq_roots.Plo
gamess/libqc/rysq/src/rysq/: Makefile  Makefile.in  config.hpp.in  core.hpp.in  cuda.hpp
gamess/libqc/src/: Makefile  Makefile.am  Makefile.in  mp2.cpp  mp2.hpp  runtime.hpp  test.cpp
gamess/libqc/src/.deps/: mp2.Plo
gamess/libqc/src/adapter/: Makefile  Makefile.in  rysq.hpp
gamess/libqc/src/bindings/: Makefile  Makefile.am  Makefile.in  fortran.cpp  fortran.h  gamess.cpp  gamess.h  test.cpp
gamess/libqc/src/bindings/.deps/: fortran.Plo  gamess.Plo
gamess/libqc/src/contrib/: Makefile  Makefile.in
gamess/libqc/src/contrib/.deps/: matplot.Plo
gamess/libqc/src/core/: Makefile  Makefile.am  Makefile.in  basis.cpp  basis.hpp  block.hpp  molecule.cpp  molecule.hpp  normalize_flymake.hpp  shell.cpp  shell.hpp
gamess/libqc/src/core/.deps/: basis.Plo  molecule.Plo  shell.Plo
gamess/libqc/src/hf/: Makefile  Makefile.in  cuda.hpp  flymake.cpp  fock.cpp  fock.hpp  generator.hpp  hf.hpp  screen.hpp  thread.hpp  work_queue.hpp
gamess/libqc/src/hf/.deps/: fock.Plo  fockjk.Plo  hf.Plo
gamess/libqc/src/matrix/: Makefile  Makefile.in  block.hpp  matrix.hpp  meta.hpp
gamess/libqc/src/matrix/.deps/: plot.Plo
gamess/libqc/src/util/: Makefile  Makefile.in  numeric.hpp
gamess/misc/: readme.vms  readme.windows  sge-gms  wrapgms
gamess/qmnuc/: NEO.DOC  NEOINP.DOC
gamess/source/: #inputa.src#  aldeci.src  aldeci.src~  gamess.src~  gugdm2.src  inputa.src  inputa.src~  iolib.src~  prpel.src  prpel.src~  scflib.src  scflib.src~
gamess/tools/: actvte.f  actvte.x  cartic  cartic.code  cartic.com  clenmo  clenmo.code  clenmo.com  mbldr.code  mbldr.com  mbldr.man  test.vec  test.xyz
pages/: KS-SCE.md~  about.md  about.md~  download.md  install.md  publications.md~  run.md
scripts/: cinput.sh
slatec/: makefile
slatec/dynamic/: makefile
slatec/src/: d1mach.f90  dbinom.f~
slatec/static/: copy.makefile  (+2 more)
v_cond/: EXInt.f90  comp.sh  cond.f90  getgss.f90  integ.f90  p1dens.f90  rdsamo.f90  valAO.f90  vbrain.f90  vcndex.f90
(+56 files in other folders)
